Fixed all spacing issues, and beveled border, gem shuffling, fonts and transparent background.

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -10,68 +10,42 @@
 }
 h1{
   font-family: justice;
+  /*font-family: 'Quantico', sans-serif;*/
   color: #805940;
-  font-size:1.75rem;
+  /*font-size:1.75rem;*/
+  font-size:2rem;
   font-weight: bold;
-  margin-top: .5rem;
+  /*margin-top: .5rem;*/
 }
-.instructions{
-  background: #EAE6D3;
+p{
+  font-family: 'Quantico', sans-serif;
+  font-size:1.375rem;
+}
+nav, .instructions{
+  /*background: #EAE6D3;*/
+  /*background: rgba(206, 168, 103, 1);*//*darktan*/
+  background: rgba(234, 230, 211, 0.8);
   border: 1px solid #805940;
 }
-.scores{
+/*.scores{
   background: #EAE6D3;
-  margin-top: 10px;
-  margin-right: 10px;
-  margin-bottom: 10px;
-  display: inline-block;
   border: 1px solid #805940;
-}
+}*/
 .gem {
-    /*padding-top:67px; */
-    width: 20%;
+    width: 25%;
+    padding: 0.625rem;
      
   }
-  .input, .output, .message{
-    background: #EAE6D3;
-    margin-top: 10px;
-    margin-bottom: 10px;
-    display: inline-block;
+  .input, .output, .message, .scores{
+    /*background: #EAE6D3;*/
+    background: rgba(234, 230, 211, 0.8);
     border: 1px solid #805940;
   }
 
-  /*row{
-    overflow:hidden;
-  }*/
-
-  /*padd15px{
-    padding:15px;
-  }*/
-
-
-  /*45 degree edges*/
-  
-  .rectangle {
-    width: 200px;
-    /*height: 100px;*/
-    background-color: #EAE6D3;
-    position: relative;
-  }
-  .rectangle:after {
-    content: '';
-    position: absolute;
-    bottom: 0;
-    right: 0;
-    width: 0;
-    height: 0;
-    border-style: solid;
-    border-width: 0 0 25px 25px;
-    /*border-color: rgb(64, 126, 128) transparent rgba(234, 230, 211, 0.5) transparent;*/
-    border-color: transparent transparent rgba(234, 230, 211, 0.5) transparent;
-  }
   .title{
     color: #805940;
     display: block;
+    font-family: 'Quantico', sans-serif;
     font-size: 1.5rem;
     margin-top: 0.83rem;
     margin-bottom: 0.83rem;
@@ -80,8 +54,55 @@ h1{
     font-weight: bold;
     /*text-align:center;*/
 }
-#matchNumberOutput, #playerTotalOutput, #winCtrOutput, #lossCtrOutput{
+
+ /*45 degree edges*/
+ /******************/
+#matchNumberOutput, #playerTotalOutput, #winCtrOutput, #lossCtrOutput, #statusMessageOutput{
   font-size: 1.375rem;
     color:#407E80;
     /*text-align:center;*/
+}
+
+.edgeContainer{
+ /* height:300px;*/
+  width:90%;
+  margin: 0 auto;
+  /*margin-bottom: 30px;*/
+    /*border-top:1px solid red;
+    border-left-color: transparent;
+    padding-left:0;
+    padding-right:0;*/
+}
+
+.topEdge, .bottomEdge, .content{
+  border-style: solid;
+  border-width: 5px;
+  /*border-color: #805940;*/
+  /*border-color: #EAE6D3;*/
+}
+
+.topEdge, .bottomEdge{
+  width:100%;
+  height:0;/* Make the div empty*/
+  border-right-color: transparent;
+  border-left-color: transparent;
+}
+.topEdge{
+ /* border-top-color:orange;
+  border-bottom-color:pink;
+  border-left-color: red;
+  border-right-color: blue;*/
+  border-top:0;/*flattening out the top border*/
+}
+.bottomEdge{
+  border-bottom:0;/*flattening out the top border*/
+  /*border-bottom: 1px;
+  border-bottom-color: #805940;*/
+  
+}
+.content{
+  width:100%;
+  overflow:auto;
+  border-top: 0;/*remove old border*/
+  border-bottom:0;/*remove old border*/
 }
